Added padding to center content. Added alt text to header image. Adjusted side postcard images to 100px

--- a/simple-postcard.html
+++ b/simple-postcard.html
@@ -130,7 +130,7 @@
 	}
 
 	.postcardContent {
-		background-color:#d8e2ea;
+		background-color:#D9E2EB;
 	}
 
 	#edgeLeft div {
@@ -184,7 +184,7 @@
                                     <td class="headerContent">
                                     
                                     	<!-- // Begin Module: Standard Header Image \\ -->
-                                    	<a href="http://www.harker.org"><img src="images/harker-email-logo.png" style="max-width:560px;" id="headerImage campaign-icon" /></a>
+                                    	<a href="http://www.harker.org"><img src="images/harker-email-logo.png" alt="The Harker School" style="max-width:560px;" id="headerImage campaign-icon" /></a>
                                     	<!-- // End Module: Standard Header Image \\ -->
                                     
                                     </td>
@@ -217,20 +217,26 @@
 				                                                        <td valign="top">
 				                                                            <table border="0" cellpadding="0" cellspacing="0" width="100%">
 					                                                			<tr>
-							                                                        <td valign="top" align="left" width="120" id="edgeLeft">
+							                                                        <td valign="top" align="left" width="100" id="edgeLeft">
 							                                                        	<div>
 							                                                        		<img src="images/left.jpg" style="max-width:100px;" />
 							                                                        	</div>
 							                                                        </td>
-							                                                        <td valign="middle" align="center" width="260" id="postcardText">
-							                                                        	<div>
-							                                                        		We are so thankful for your generous support of our students. Wishing you and your family a very happy holiday.
-							                                                        		<br />
-																							<br />
-																							The faculty and staff of The Harker School
-							                                                        	</div>
+							                                                        <td valign="middle" align="center" width="300" id="postcardText">
+							                                                        	<table border="0" cellpadding="20" cellspacing="0" width="100%">
+												                                        	<tr>
+												                                        		<td valign="top">
+										                                                        	<div>
+										                                                        		We are so thankful for your generous support of our students. Wishing you and your family a very happy holiday.
+										                                                        		<br />
+																										<br />
+																										The faculty and staff of The Harker School
+										                                                        	</div>
+										                                                        </td>
+										                                                    </tr>
+										                                                </table>
 							                                                        </td>
-							                                                        <td valign="top" align="right" width="120" id="edgeRight">
+							                                                        <td valign="top" align="right" width="100" id="edgeRight">
 							                                                        	<div>
 							                                                        		<img src="images/right.jpg" style="max-width:100px;" />
 							                                                        	</div>
