--- a/alumni-newsletter.html
+++ b/alumni-newsletter.html
@@ -431,6 +431,7 @@
 				                                                                </tr>
 				                                                            </table>
 				                                                            <!-- // End Module: Related Events \\ -->
+				                                                            <!-- // Begin Module: Call-to-action Button \\ -->
 				                                                            <table border="0" cellpadding="20" cellspacing="0" width="100%">
 				                                                            	<tr>
 				                                                            		<td valign="top" style="padding-top: 0;">
@@ -446,6 +447,34 @@
 				                                                            		</td>
 				                                                            	</tr>
 				                                                            </table>
+				                                                            <!-- // End Module: Call-to-action Button \\ -->
+				                                                            <!-- // Begin Module: Social Media \\ -->
+				                                                            <table border="0" cellpadding="20" cellspacing="0" width="100%">
+				                                                            	<tr>
+				                                                            		<td valign="top" style="padding-top:0;">
+				                                                            			<table border="0" cellpadding="0" cellspacing="0" width="100%">
+							                                                            	<tr>
+							                                                            		<td valign="top" width="33">
+							                                                            			<a href="#"><img src="http://www.harker.org/uploaded/assets/graphics/icons/ico-facebook.png" style="max-width: 28px;" /></a>
+							                                                            		</td>
+							                                                            		<td valign="top" width="33">
+							                                                            			<a href="#"><img src="http://www.harker.org/uploaded/assets/graphics/icons/ico-linkedin.png" style="max-width: 28px;" /></a>
+							                                                            		</td>
+							                                                            		<td valign="top" width="33">
+							                                                            			<a href="#"><img src="http://www.harker.org/uploaded/assets/graphics/icons/ico-twitter.png" style="max-width: 28px;" /></a>
+							                                                            		</td>
+							                                                            		<td valign="top" width="33">
+							                                                            			<a href="#"><img src="http://www.harker.org/uploaded/assets/graphics/icons/ico-hno.png" style="max-width: 28px;" /></a>
+							                                                            		</td>
+							                                                            		<td valign="top" width="28">
+							                                                            			<a href="#"><img src="http://www.harker.org/uploaded/assets/graphics/icons/ico-hq.png" style="max-width: 28px;" /></a>
+							                                                            		</td>
+							                                                            	</tr>
+							                                                            </table>
+				                                                            		</td>
+				                                                            	</tr>
+				                                                            </table>
+				                                                            <!-- // End Module: Social Media \\ -->
 							                                            </td>
 							                                            <!-- // End Sidebar \\ -->
 							                                        </tr>
