Removed mailchimp tags

--- a/alumni-newsletter.html
+++ b/alumni-newsletter.html
@@ -3,9 +3,6 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-<!-- Facebook sharing information tags -->
-<meta property="og:title" content="*|MC:SUBJECT|*" />
-
 <title>Alumni Newsletter</title>
 <style type="text/css">
 	/* Client-specific Styles */
@@ -274,7 +271,7 @@
 	                                                                            <tr>
 	                                                                                <td valign="top">
 	                                                                                	<img src="http://placekitten.com/320/200" style="max-width: 320px; margin-bottom: 20px;" />
-	 						                                                            <div mc:edit="std_content00">
+	 						                                                            <div>
 							                                                                <h2 class="h2">Heading 2</h2>
 							                                                                <div class="note">Convince my why didn’t I rely come but found there is remotes.</div>
 							                                                                <h4 class="h4">Heading 4</h4>
@@ -308,7 +305,7 @@
 				                                                                        	</tr>
 				                                                                            <tr>
 				                                                                                <td valign="top">
-				 						                                                            <div mc:edit="std_content00">
+				 						                                                            <div>
 										                                                                Try to swim, keep your head up. Kick your legs, never give up, boy. And if I could I'd turn it around. Let me out. I wanna get out now. You know the feeling when you're in too deep. And then you make it out the taste so sweet. Sweet.
 										                                                                <br />
 										                                                                <a href="#">More Info &raquo;</a>
@@ -342,7 +339,7 @@
 				                                                                        	</tr>
 				                                                                            <tr>
 				                                                                                <td valign="top">
-				 						                                                            <div mc:edit="std_content00">
+				 						                                                            <div>
 										                                                                Try to swim, keep your head up. Kick your legs, never give up, boy. And if I could I'd turn it around. Let me out. I wanna get out now. You know the feeling when you're in too deep. And then you make it out the taste so sweet. Sweet.
 										                                                                <br />
 										                                                                <a href="#">More Info &raquo;</a>
@@ -376,7 +373,7 @@
 				                                                                        	</tr>
 				                                                                            <tr>
 				                                                                                <td valign="top">
-				 						                                                            <div mc:edit="std_content00">
+				 						                                                            <div>
 										                                                                Try to swim, keep your head up. Kick your legs, never give up, boy. And if I could I'd turn it around. Let me out. I wanna get out now. You know the feeling when you're in too deep. And then you make it out the taste so sweet. Sweet.
 										                                                                <br />
 										                                                                <a href="#">More Info &raquo;</a>
@@ -394,31 +391,31 @@
 
 				                                                            <!-- // Begin Module: Related Events \\ -->
 				                                                            <table border="0" cellpadding="20" cellspacing="0" width="100%">
-				                                                                <tr mc:repeatable>
+				                                                                <tr>
 				                                                                    <td valign="top">
 				                                                                    	<table border="0" cellpadding="0" cellspacing="0" width="100%">
 				                                                                    		<tr>
 				                                                                    			<td valign="top" class="relatedEvents">
 				                                                                    				<h2 class="h2">Related Events</h2>
 							                                                                        <table border="0" cellpadding="0" cellspacing="0">
-							                                                                            <tr mc:hideable>
+							                                                                            <tr>
 							                                                                                <td align="left" valign="top" width="50" style="padding-top: 0; padding-right: 0; padding-bottom: 20px; padding-left: 0;">
 							                                                                                    <img src="http://placekitten.com/40/50" style="max-width: 40px;" />
 							                                                                                </td>
 							                                                                                <td align="left" valign="top" width="110" style="padding-top: 0; padding-right: 0; padding-bottom: 20px; padding-left: 0;">
-							                                                                                    <div mc:edit="sbwi_link_one">
+							                                                                                    <div>
 							                                                                                    	<h4 class="h4">Some Event Name</h4>
 							                                                                                        Nov., 2, 2012 | 10 a.m.<br />
 							                                                                                        <a href="#">More Info &raquo;</a>
 							                                                                                    </div>
 							                                                                                </td>
 							                                                                            </tr>
-							                                                                            <tr mc:hideable>
+							                                                                            <tr>
 							                                                                                <td align="left" valign="top" width="50" style="padding-top: 0; padding-right: 0; padding-bottom: 20px; padding-left: 0;">
 							                                                                                    <img src="http://placekitten.com/40/50" style="max-width: 40px;" />
 							                                                                                </td>
 							                                                                                <td align="left" valign="top" width="110" style="padding-top: 0; padding-right: 0; padding-bottom: 20px; padding-left: 0">
-							                                                                                    <div mc:edit="sbwi_link_one">
+							                                                                                    <div>
 							                                                                                    	<h4 class="h4">Some Event Name</h4>
 							                                                                                        Nov., 2, 2012 | 10 a.m.<br />
 							                                                                                        <a href="#">More Info &raquo;</a>
@@ -440,7 +437,7 @@
 				                                                            			<table border="0" cellpadding="15" cellspacing="0" width="100%" class="templateButton">
 							                                                            	<tr>
 							                                                                	<td valign="middle" class="templateButtonContent">
-							                                                                    	<div mc:edit="std_content01">
+							                                                                    	<div>
 							                                                                        	<a href="http://www.mandrill.com/" target="_blank">Click Here!!!</a>
 							                                                                        </div>
 							                                                                    </td>
