--- a/alumni-newsletter.html
+++ b/alumni-newsletter.html
@@ -400,7 +400,7 @@
 							                                                                        <table border="0" cellpadding="0" cellspacing="0">
 							                                                                            <tr>
 							                                                                                <td align="left" valign="top" width="50" style="padding-top: 0; padding-right: 0; padding-bottom: 20px; padding-left: 0;">
-							                                                                                    <img src="http://placekitten.com/40/50" style="max-width: 40px;" />
+							                                                                                    <img src="http://www.harker.org/uploaded/assets/graphics/icons/calendar-icons/ico-calendar-placeholder1.png" style="max-width: 40px;" />
 							                                                                                </td>
 							                                                                                <td align="left" valign="top" width="110" style="padding-top: 0; padding-right: 0; padding-bottom: 20px; padding-left: 0;">
 							                                                                                    <div>
@@ -412,7 +412,7 @@
 							                                                                            </tr>
 							                                                                            <tr>
 							                                                                                <td align="left" valign="top" width="50" style="padding-top: 0; padding-right: 0; padding-bottom: 20px; padding-left: 0;">
-							                                                                                    <img src="http://placekitten.com/40/50" style="max-width: 40px;" />
+							                                                                                    <img src="http://www.harker.org/uploaded/assets/graphics/icons/calendar-icons/ico-calendar-placeholder2.png" style="max-width: 40px;" />
 							                                                                                </td>
 							                                                                                <td align="left" valign="top" width="110" style="padding-top: 0; padding-right: 0; padding-bottom: 20px; padding-left: 0">
 							                                                                                    <div>
