Replaced Harker Logo with Alumni logo

--- a/alumni-newsletter.html
+++ b/alumni-newsletter.html
@@ -220,10 +220,10 @@
                             <!-- // Begin Template Header \\ -->
                         	<table border="0" cellpadding="0" cellspacing="0" width="560" id="templateHeader">
                                 <tr>
-                                    <td class="headerContent">
+                                    <td valign="middle" class="headerContent">
                                     
                                     	<!-- // Begin Module: Standard Header Image \\ -->
-                                    	<a href="http://www.harker.org"><img src="http://www.harker.org/uploaded/assets/graphics/enotify/harker-email-logo.png" alt="The Harker School" style="max-width:560px;" id="headerImage campaign-icon" /></a>
+                                    	<a href="http://www.harker.org/alumni"><img src="http://www.harker.org/uploaded/themes/enotify-2012/images/header-alumni-logo.png" alt="The Harker School" style="max-width:560px;" id="headerImage campaign-icon" /></a>
                                     	<!-- // End Module: Standard Header Image \\ -->
                                     
                                     </td>
