Added image header/shadow to content body

--- a/fs-email-tere.html
+++ b/fs-email-tere.html
@@ -237,6 +237,9 @@
                     	<td align="center" valign="top">
                             <!-- // Begin Template Body \\ -->
                         	<table border="0" cellpadding="0" cellspacing="0" width="568" id="templateBody">
+                        		<tr>
+                        			<td valign="top" width="568"><img src="http://www.harker.org/uploaded/themes/enotify-2012/images/dropshadow-top.gif" width="568" height="22" /></td>
+                        		</tr>
                             	<tr>
                             		<td valign="top" width="4"><img src="http://www.harker.org/uploaded/themes/enotify-2012/images/dropshadow-left.gif" width="4" height="100%" /></td>
                                     <td valign="top" class="bodyContent" width="560">
