--- a/fs-email-tere.html
+++ b/fs-email-tere.html
@@ -279,33 +279,17 @@
 	 						                                                            <div>
 							                                                                <h2 class="h2">Celebrate With Us!</h2>
 							                                                                <div class="note">2013 Harker Fashion Show - Mission: Possible</div>
-							                                                                <h4 class="h4">Sponsorship Opportunites</h4>
-							                                                                This year marks the 10th anniversary of the fashion show. The committee and many members of our community are dedicating a huge amount of effort to deliver a totally unique and spectacular show for our guests to enjoy.
+							                                                                We are excited this year to celebrate the 10th anniversary of The Harker School Fashion Show! Our committee is dedicated to delivering a unique and spectacular show. We can’t wait to see you there. <a href="#">Buy your tickets today!</a>
 																							<br>
 																							<br>
-																							This year’s theme, “Mission: Possible - Dare to Try,“ is inspiring us to dream big and try to achieve things that will take the show and The Harker School to the next level of excellence, as we support our programs, our Mission and our Philosophy.
-																							<br>
-																							<br>
-																							So far we have dared ourselves in these ways:
-																							<ul>
-																								<li>We are making it possible for more students than ever to participate in the show.</li>
-																								<li>Our producers and performing arts department are working passionately and diligently to offer what will be, without a doubt, an unforgettable and visionary show.</li>
-																								<li>Our parent community has stepped up once more to share their talents by being part of the committees.</li>
-																							</ul>
-																							Helping us to achieve these milestones are our many sponsors, to whom we are very grateful. I would like to invite you to consider becoming a sponsor and/or underwriter of this year’s show; join us in the rewarding journey to strive for a higher quality experience for our students.
-																							<br>
-																							<br>
-																							If you are interested in being an underwriter for this year’s show, please <a href="http://www.harker.org/fashionshow">visit our website</a>.
-																							<br>
-																							<br>
-																							I wish you a wonderful break and an extraordinary 2013!
-																							<br>
-																							<br>
-																							<div>
-																								<div class="signatureName">Teré Aceves</div>
-																								<div class="signatureTitle">Director of K-8 Volunteer Programs and Event Fundraising</div>
-																								<div class="signatureContact">Email: <a href="mailto:terea@harker.org">terea@harker.org</a></div>
-																							</div>
+																							<table>
+																								<tr>
+																									<td>John Keller<br>
+																									Fashion Show Chair</td>
+																									<td>Teré Aceves<br>
+																									Fashion Show Liaison</td>
+																								</tr>
+																							</table>
 																							<br>
 																							<br>
 																							<!-- // Begin Module: Call-to-action Button \\ -->
@@ -344,7 +328,6 @@
 					                                                                        				</td>
 					                                                                        				<td valign="top" width="220">
 					                                                                        					<h2 class="h2">Ways to Support the Show</h2>
-											                                                                	<div class="note">A subheadline to quickly recap something.</div>
 					                                                                        				</td>
 					                                                                        			</tr>
 					                                                                        		</table>
@@ -353,9 +336,26 @@
 				                                                                            <tr>
 				                                                                                <td valign="top">
 				 						                                                            <div>
-										                                                                Try to swim, keep your head up. Kick your legs, never give up, boy. And if I could I'd turn it around. Let me out. I wanna get out now. You know the feeling when you're in too deep. And then you make it out the taste so sweet. Sweet.
+										                                                                This year’s theme, “Mission: Possible - Dare to Try,“ is inspiring us to dream big and achieve things that will take the show and The Harker School to the next level of excellence, while at the same time supporting our programs, our mission and our philosophy.
+ 																										<br>
+										                                                                <br>
+																										This year we are making it possible for more students than ever to participate in the show; our producers and performing arts department are working passionately and diligently to offer what will undoubtedly be an unforgettable and visionary show.
+																										<br>
+										                                                                <br>
+																										Helping us to achieve these milestones are our many sponsors, to whom we are very grateful. I would like to invite you to consider becoming a sponsor and/or underwriter of this year’s show; join us in the rewarding journey to strive for a higher quality experience for our students.
+																										<br>
+										                                                                <br> 
+																										If you are interested in being a sponsor or underwriter for “Mission Possible - Dare to Try”, please contact Tere Aceves at <a href="mailto:terea@harker.org">terea@harker.org</a>.
+																										<br>
+										                                                                <br>
+																										I wish you an extraordinary 2013!
 										                                                                <br>
 										                                                                <br>
+																										<div>
+																											<div class="signatureName">Teré Aceves</div>
+																											<div class="signatureTitle">Director of K-8 Volunteer Programs and Event Fundraising</div>
+																											<div class="signatureContact">Email: <a href="mailto:terea@harker.org">terea@harker.org</a></div>
+																										</div>
 											                                                            <!-- // Begin Module: Call-to-action Button \\ -->
 											                                                            <table border="0" cellpadding="0" cellspacing="0" width="100%">
 											                                                            	<tr>
@@ -364,7 +364,7 @@
 														                                                            	<tr>
 														                                                                	<td valign="middle" class="templateButtonContent">
 														                                                                    	<div>
-														                                                                        	<a href="http://www.harker.org/page.cfm?p=3078">Ways to Support</a>
+														                                                                        	<a href="http://www.harker.org/page.cfm?p=3078">Sponsors</a>
 														                                                                        </div>
 														                                                                    </td>
 														                                                                </tr>
@@ -376,7 +376,19 @@
 														                                                            	<tr>
 														                                                                	<td valign="middle" class="templateButtonContent">
 														                                                                    	<div>
-														                                                                        	<a href="#">Sponsorship Benefits</a>
+														                                                                        	<a href="#">Partners</a>
+														                                                                        </div>
+														                                                                    </td>
+														                                                                </tr>
+														                                                            </table>
+											                                                            		</td>
+											                                                            		<td valign="top" style="padding-top: 0;" width="10"></td>
+											                                                            		<td valign="top" style="padding-top: 0;">
+											                                                            			<table border="0" cellpadding="15" cellspacing="0" width="100%" class="templateButtonAlt">
+														                                                            	<tr>
+														                                                                	<td valign="middle" class="templateButtonContent">
+														                                                                    	<div>
+														                                                                        	<a href="#">Fashion Show Website</a>
 														                                                                        </div>
 														                                                                    </td>
 														                                                                </tr>
