Fixed signature stacked spacing

--- a/fs-email-tere.html
+++ b/fs-email-tere.html
@@ -282,7 +282,7 @@
 							                                                                We are excited this year to celebrate the 10th anniversary of The Harker School Fashion Show! Our committee is dedicated to delivering a unique and spectacular show. We can’t wait to see you there. <a href="#">Buy your tickets today!</a>
 																							<br>
 																							<br>
-																							<table>
+																							<table cellpadding="0" cellspacing="0" width="100%">
 																								<tr>
 																									<td>John Keller<br>
 																									Fashion Show Chair</td>
@@ -342,7 +342,7 @@
 											                                                            		</td>
 											                                                            		<td valign="top" style="padding-top: 0;" width="10"></td>
 											                                                            		<td valign="top" style="padding-top: 0;">
-											                                                            			<table border="0" cellpadding="15" cellspacing="0" width="100%" class="templateButtonAlt">
+											                                                            			<table border="0" cellpadding="15" cellspacing="0" class="templateButtonAlt">
 														                                                            	<tr>
 														                                                                	<td valign="middle" class="templateButtonContent">
 														                                                                    	<div>
