--- a/fs-email-tere.html
+++ b/fs-email-tere.html
@@ -138,8 +138,9 @@
 		margin-bottom: 10px;
 	}
 
-	.article{
-		border-top:1px dashed #aeaeae;
+	.feature-article div.content{
+		padding-bottom:20px;
+		border-bottom:1px dashed #aeaeae;
 	}
 	#templateSidebar div {
 		color: #737373;
@@ -272,22 +273,22 @@
 							                                    	<tr>
 							                                        	<td valign="top" width="360">
 							                                        		<!-- // Begin Module: Feature Article \\ -->
-	                                                                        <table border="0" cellpadding="20" cellspacing="0" width="100%">
+	                                                                        <table border="0" cellpadding="20" cellspacing="0" width="100%" class="feature-article">
 	                                                                            <tr>
 	                                                                                <td valign="top">
 	                                                                                	<img src="http://placekitten.com/320/235" style="max-width: 320px; margin-bottom: 20px;" />
-	 						                                                            <div>
+	 						                                                            <div class="content">
 							                                                                <h2 class="h2">Celebrate With Us!</h2>
 							                                                                <div class="note">2013 Harker Fashion Show - Mission: Possible</div>
 							                                                                We are excited this year to celebrate the 10th anniversary of The Harker School Fashion Show! Our committee is dedicated to delivering a unique and spectacular show. We can’t wait to see you there. <a href="#">Buy your tickets today!</a>
 																							<br>
 																							<br>
-																							<table cellpadding="0" cellspacing="0" width="100%">
+																							<table border="0" cellpadding="0" cellspacing="0" width="100%">
 																								<tr>
-																									<td>John Keller<br>
-																									Fashion Show Chair</td>
-																									<td>Teré Aceves<br>
-																									Fashion Show Liaison</td>
+																									<td><div class="signatureName">John Keller</div>
+																									<div class="signatureTitle">Fashion Show Chair</div></td>
+																									<td><div class="signatureName">Teré Aceves</div>
+																									<div class="signatureTitle">Fashion Show Liaison</div></td>
 																								</tr>
 																							</table>
 							                                                            </div>
@@ -299,7 +300,7 @@
 	                                                                        <table border="0" cellpadding="20" cellspacing="0" width="100%">
 	                                                                        	<tr>
 	                                                                        		<td valign="top">
-	                                                                        			<table border="0" cellpadding="0" cellspacing="0" width="100%" class="article">
+	                                                                        			<table border="0" cellpadding="0" cellspacing="0" width="100%">
 				                                                                            <tr>
 				                                                                                <td valign="top">
 				 						                                                            <div>
@@ -358,7 +359,7 @@
 														                                                            	<tr>
 														                                                                	<td valign="middle" class="templateButtonContent">
 														                                                                    	<div>
-														                                                                        	<a href="#">Fashion Show Website</a>
+														                                                                        	<a href="#">Fashion Show</a>
 														                                                                        </div>
 														                                                                    </td>
 														                                                                </tr>
