Added sidebar graphics

--- a/summer-announcement.html
+++ b/summer-announcement.html
@@ -354,6 +354,28 @@
 				                                                            	</tr>
 				                                                            </table>
 				                                                            <!-- // End Module: Call-to-action Button \\ -->
+				                                                            <!-- // Begin Module: Image \\ -->
+				                                                            <table border="0" cellpadding="20" cellspacing="0" width="100%">
+				                                                            	<tr>
+				                                                            		<td valign="top" style="padding-top: 0;">
+				                                                            			<div>
+				                                                            				<img src="http://www.harker.org/uploaded/assets/graphics/enotify/summer/summer-enotify-discount-2013.png" alt="15% discount for Harker families" />
+				                                                            			</div>
+				                                                            		</td>
+				                                                            	</tr>
+				                                                            </table>
+				                                                            <!-- // End Module: Image \\ -->
+				                                                            <!-- // Begin Module: Image \\ -->
+				                                                            <table border="0" cellpadding="20" cellspacing="0" width="100%">
+				                                                            	<tr>
+				                                                            		<td valign="top" style="padding-top: 0;">
+				                                                            			<div>
+				                                                            				<img src="http://www.harker.org/uploaded/assets/graphics/enotify/summer/summer-enotify-postit-2013.png" alt="15% discount for Harker families" />
+				                                                            			</div>
+				                                                            		</td>
+				                                                            	</tr>
+				                                                            </table>
+				                                                            <!-- // End Module: Image \\ -->
 							                                            </td>
 							                                            <!-- // End Sidebar \\ -->
 							                                        </tr>
